# jb-test-project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  searcher.cpp  searcher.hpp
